website/websites/u32q/code/spectralnorm.2.scala.log

Mon, 18 May 2015 23:45:38 GMT

MAKE:
mv spectralnorm.scala-2.scala spectralnorm.scala
/usr/local/src/scala-2.11.6/bin/scalac -optimise -target:jvm-1.8 spectralnorm.scala
Picked up JAVA_TOOL_OPTIONS: -javaagent:/usr/share/java/jayatanaag.jar 
spectralnorm.scala:23: error: identifier expected but 'var' found.
      var vv = 0.
      ^
spectralnorm.scala:39: error: identifier expected but 'var' found.
      var m_vv = 0.
      ^
spectralnorm.scala:59: error: identifier expected but 'var' found.
            var j = 0
            ^
spectralnorm.scala:71: error: identifier expected but 'var' found.
            var j = 0
            ^
four errors found
/home/dunham/benchmarksgame/nanobench/makefiles/u32q.programs.Makefile:595: recipe for target 'spectralnorm.scala-2.scala_run' failed
make: [spectralnorm.scala-2.scala_run] Error 1 (ignored)
2.70s to complete and log all make actions

COMMAND LINE:
 /usr/local/src/jdk1.8.0_45/bin/java -server -XX:+TieredCompilation -XX:+AggressiveOpts  -Xbootclasspath/a:/usr/local/src/scala-2.11.6/lib/scala-library.jar:/usr/local/src/scala-2.11.6/lib/akka-actors.jar:/usr/local/src/scala-2.11.6/lib/typesafe-config.jar spectralnorm 500

PROGRAM FAILED 


PROGRAM OUTPUT:

Picked up JAVA_TOOL_OPTIONS: -javaagent:/usr/share/java/jayatanaag.jar 
Error: Could not find or load main class spectralnorm
